# AI-Conferences-ETL

./: README.md  pyproject.toml
data_ingestion_pipeline/: config.py
notebooks/: ai_events_etl.ipynb
