[project]
name = "ai-conferences-etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "bs4>=0.0.2",
    "pandas>=2.3.2",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "requests>=2.32.5",
]
