[project]
name = "ai-conferences-etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
conferences-ingestion-pipeline = [
    "bs4>=0.0.2",
    "datetime>=5.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "requests>=2.32.5",
]
dev = [
    "loguru>=0.7.3",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
]
python-notebooks = [
    "ipykernel>=6.30.1",
    "notebook>=7.4.7",
]
